--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 		window.onload = () => loadStyleSheet('css/bootstrap.css');
 	</script>
 
-	<script type="text/javascript" src="js/jquery.js" async></script>
+	<script type="text/javascript" src="js/jquery.js" defer></script>
 	<script type="text/javascript" src="js/ajaxchimp.js" async></script>
 
 	<script type="text/javascript" src="js/owl.carousel.min.js"></script>
