--- a/index.html
+++ b/index.html
@@ -298,9 +298,8 @@
 		window.onload = () => loadStyleSheet('css/bootstrap.css');
 	</script>
 
-	<script type="text/javascript" src="js/jquery.js" defer></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/ajaxchimp.js" async></script>
-
 	<script type="text/javascript" src="js/owl.carousel.min.js"></script>
 	<script type="text/javascript" src="js/wow.js" async></script>
 	<script type="text/javascript" src="js/parallax.js" async></script>
