--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header>
 		<div class="container">
 			<div class="logo pull-left animated wow fadeInLeft">
-				<img class="logo-image" src="img/logo.png" alt="" title="" width="552px" height="100px">
+				<img class="logo-image" src="img/logo.png" alt="" title="" width="200" height="38px">
 			</div>
 
 
